--- a/styles.css
+++ b/styles.css
@@ -416,3 +416,204 @@ nav i{
     background-color: #5758F1;
     color: #FFFFFF;
 }
+
+.best-friend-screen{
+    width: 99vw;
+    height: 75vh;
+    background-color: #1E1F27;
+}
+
+.best-friend-title{
+    margin: auto;
+    text-align: center;
+    width: 43vw;
+    height: 8vh;
+}
+
+.best-friend-title h1{
+    padding-top: 8vh;
+    font-size: 3em;
+    font-weight: bolder;
+    color: #FFFFFF;
+}
+
+.best-friend-container{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    width: 99vw;
+    height: 44.5vh;
+    margin-top: 15vh;
+}
+
+.destaque{
+    color: #F8DB46;
+}
+
+.best-friend-content{
+    width: 40vw;
+}
+
+.best-friend-content h1{
+    margin-top: 5vh;
+    font-size: 1.9em;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.best-friend-buttons{
+    padding: 15px 25px;
+    border-radius: 25px;
+    font-size: 16px;
+    font-weight: bolder;
+    cursor: pointer;
+    margin-top: 7vh;
+}
+
+#best-friend-button-view{
+    margin-left: 7.5vh;
+    background-color: #F8DB46;
+    color: #1E1F27;
+}
+
+#best-friend-button-adopt{
+    margin-left: 1.5vh;
+    border: 2px solid #FFFFFF;
+    background-color: #1E1F27;
+    color: #FFFFFF;
+}
+
+.subscribe-screen{
+    width: 99vw;
+    height: 38vh;
+    background-color: #5758F1;
+}
+
+.subscribe-screen-title{
+    text-align: center;
+    margin: auto;
+    padding-top: 5vh;
+    width: 40vw;
+    height: 20vh;
+}
+
+.subscribe-screen-title h1{
+    font-size: 2.7em;
+    color: #FFFFFF;
+}
+
+.subscribe-screen-title p{
+    margin-top: 5vh;
+    font-size: 1em;
+    color: #FFFFFFCC;
+}
+
+.subscribe-screen-buttons{
+    text-align: center;
+    margin: auto;
+    width: 30vw;
+    height: 5.5vh;
+}
+
+.subscribe-screen-buttons input{
+    color: #FFFFFF80;
+    background: none;
+    border: 2px solid #FFFFFF;
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
+#subscribe-button{
+    margin-left: 3vh;
+    color: #1E1F27;
+    padding: 10px 20px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    font-weight: bolder;
+    border: none;
+}
+
+footer{
+    width: 99vw;
+    height: 50vh;
+    background-color: #F5F5F5;
+}
+
+.footer-container{
+    padding-top: 10vh;
+    background-color: #F5F5F5;
+    width: 99vw;
+    height: 60vh;
+    display: flex;
+}
+
+.footer-logo{
+    flex: 1;
+    margin-left: 8vh;
+}
+
+.footer-logo p{
+    font-size: 1em;
+    margin-top: 1.5vh;
+    font-weight: bolder;
+    color: #1E1F27;
+}
+
+.logo{
+    width: 60px;
+    height: 60px;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: space-around;
+    flex: 2;
+}
+
+.footer-links a {
+    font-weight: bolder;
+    color: #1E1F27;
+    text-decoration: none;
+    margin-top: 3vh;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.footer-contact {
+    flex: 1;
+    text-align: left;
+}
+
+.footer-contact p {
+    font-weight: bolder;
+    margin: 25px 0;
+}
+
+.social-icons img {
+    width: 20px;
+    height: auto;
+    margin-top: 5vh;
+    margin-left: 2.5vh;
+}
+
+.footer-bottom {
+    margin: auto;
+    width: 80vw;
+    border-top: 2px solid #1E1F27;
+}
+
+.footer-bottom p {
+    margin-top: 6.5vh;
+    font-size: 2em;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.footer-bottom span {
+    color: #ff3399;
+    font-weight: bold;
+}
