--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ nav i{
     font-size: 1.5em;
 }
 
-.carrosel-container{
+.carrosel-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -198,12 +198,20 @@ nav i{
     height: 47vh;
 }
 
-.carrosel-imagens{
+.carrosel-imagens {
+    display: flex;
+    overflow: hidden;
+    scroll-behavior: smooth;
     width: 73vw;
-    height: 40vh;
 }
 
-.botao-carrosel{
+.imagem-carrosel {
+    flex: 0 0 calc(100% / 3);
+    height: 40vh;
+    object-fit: cover;
+}
+
+.botao-carrosel {
     background: none;
     border: none;
     color: white;
@@ -818,4 +826,34 @@ footer{
     cursor: pointer;
     margin-top: 1.5vh;
     margin-left: 10.3vh;
+}
+
+#cancel-button3{
+    background-color: #37383F;
+    color: #F5F5F5;
+    border: none;
+    padding: 10px 25px;
+    border-radius: 35px;
+    width: 10%;
+    font-size: 1.2em;
+    font-weight: bolder;
+    cursor: pointer;
+    margin-top: 5.5vh;
+    margin-left: 10.3vh;
+}
+
+.success-container{
+    margin-left: 11.5vh;
+    margin-top: 5vh;
+}
+
+.success-container h2{
+    font-size: 2.5em;
+    margin-bottom: 2vh;
+}
+
+.success-container p{
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 1.2em;
 }
